...
import { useAppDispatch, useAppSelector } from '../../store/hooks';
import { fetchNotifications, markRead, markAllRead } from '../../store/slices/notificationsSlice';
import Icon from '../../components/common/Icon';
import { colors } from '../../constants/designTokens';

const ICONS = {
  talk: 'mic',
  mentor: 'handshake',
  challenge: 'trophy',
  badge: 'star',
  health: 'heart',
  system: 'bell',
};
...
