appId: com.breakfree.app
---
- launchApp
- tapOn: 'Topluluk'
- assertVisible: 'Meydan Okumalar'
- tapOn: 'Meydan Okumalar'
- assertVisible: 'Rozetlerin'
